fix: correct internal hrefs in Mintlify docs
Added docs/ prefix to all Card hrefs to match mint.json paths:
- introduction.mdx: quickstart, api-reference/overview
- quickstart.mdx: sdk/intelligence-levels, sdk/ai-context, sdk/always-run, sdk/manual-api
- api-reference/overview.mdx: quickstart, sdk/manual-api

--- a/docs/api-reference/overview.mdx
+++ b/docs/api-reference/overview.mdx
@@ -58,10 +58,10 @@ All errors return JSON:
 ## SDKs
 
 <CardGroup cols={2}>
-  <Card title="Node.js SDK" icon="node-js" href="/quickstart">
+  <Card title="Node.js SDK" icon="node-js" href="/docs/quickstart">
     Official SDK with Crawlee integration
   </Card>
-  <Card title="Manual Integration" icon="code" href="/sdk/manual-api">
+  <Card title="Manual Integration" icon="code" href="/docs/sdk/manual-api">
     Use the API directly in any language
   </Card>
 </CardGroup>
