--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -53,10 +53,10 @@ Your Scraper → FetchBrain SDK → AI knows? → YES → Return AI knowledge (s
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/quickstart">
+  <Card title="Quickstart" icon="rocket" href="/docs/quickstart">
     Get up and running in 5 minutes
   </Card>
-  <Card title="API Reference" icon="code" href="/api-reference/overview">
+  <Card title="API Reference" icon="code" href="/docs/api-reference/overview">
     Direct HTTP API for any language
   </Card>
 </CardGroup>
