--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -71,17 +71,17 @@ That's it! 🎉 Your scraper now:
   <Card
     title="Intelligence Levels"
     icon="brain"
-    href="/sdk/intelligence-levels"
+    href="/docs/sdk/intelligence-levels"
   >
     Configure AI confidence thresholds
   </Card>
-  <Card title="AI Context" icon="sparkles" href="/sdk/ai-context">
+  <Card title="AI Context" icon="sparkles" href="/docs/sdk/ai-context">
     Access AI data in your handler
   </Card>
-  <Card title="Always Run Mode" icon="play" href="/sdk/always-run">
+  <Card title="Always Run Mode" icon="play" href="/docs/sdk/always-run">
     Control which handlers run
   </Card>
-  <Card title="Manual API" icon="terminal" href="/sdk/manual-api">
+  <Card title="Manual API" icon="terminal" href="/docs/sdk/manual-api">
     Use without Crawlee
   </Card>
 </CardGroup>
